Fix conference series blank widget overview heading not centered

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -2,3 +2,7 @@
   max-height: 100px;
   width: auto;
 }
+
+#intro.wg-blank h1 {
+  text-align: center;
+}
